apps/prod/proxmox-proxy/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: proxmox-proxy
  name: proxmox-proxy
  namespace: proxmox-proxy
spec:
  externalName: 192.168.40.3
  type: ExternalName
  ports:
  - name: websecure
    port: 8006
    targetPort: 8006
  - name: metrics
    port: 9100
    targetPort: 9100
  - name: pve
    port: 9221
    targetPort: 9221
  selector:
    app.kubernetes.io/name: proxmox-proxy
---
# Endpoint for the headless service without selector
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app.kubernetes.io/name: proxmox-proxy
  name: proxmox-proxy
  namespace: proxmox-proxy
subsets:
- addresses:
  - ip: 192.168.40.3
  ports:
  - name: websecure
    port: 8006
  - name: metrics
    port: 9100
  - name: pve
    port: 9221
