apps/prod/proxmox-proxy/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: ENC[AES256_GCM,data:nEXDJ5JASdgYB7+k9h7wmVyfAKLoWYJSsVY/mUwTEfY=,iv:8mdOpHjqcRKfWWg0MGGKXwByHR6r+QmvI9ariayxJ+E=,tag:FkvGZ5r8cvXHQLcPVxo+Dg==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:IDOV+mhkJZKwkbjEare8/3DNnENncjAnlxl8cLN9nVA=,iv:JhGcq1rgHgNwDEXLYWlpwsN0C9Jbgx0kzha0qHbmSS4=,tag:IBJ29xZB9QBau7X3Odr1Xg==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:4jxm+hRhrfmdBcW1y5xUri/fwpLagL7v,iv:fTsNuYmzbqYh3NIAMDe2WJ9OruBPDm5evLrloBEmYjc=,tag:P7FAGvOsyUSFeBp401hCWA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: proxmox-production
    # traefik
    namespace: proxmox-proxy
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:rHhj1AGFxgUVw9UZ6EtoJbfCZ0dEFc81+NY1PDeX7+JSP42eBWT0vgJ8rhjCPIrq6tZJIiplMKY9szgZ7DmvDq/3zOM7TlGtPevQi84wmAjToQUGJpSfbvUMouZfQGebH0UQtmsav3yNbWv+CCjNbPKtjKaxQC057BKsHk+gxcclLFY+TEFcGdMxMLc=,iv:GCOgAsVxint0LDOLlENy15VkTcB3qkHs3FSgMZFPFx4=,tag:ao7s9C6OvYt1kJs1fFS3zw==,type:str]
          priority: 10
          middlewares:
            - name: redirect-to-https
            - name: chain-authentik
              namespace: traefik
          services:
            - name: proxmox-proxy
              port: 8006
              scheme: https
              passHostHeader: true
        - kind: Rule
          match: ENC[AES256_GCM,data:I6M7kq65Ntg4sl6HfIc9bntnSWaw7jsalDv58QuwArphG/3OTb5+T2QlcLYvAEDCxLwuunT5Mq//0bu180o+IAioARYlKbYQvlZyEhLqn7ul4Q==,iv:eHckqLm/k5I2o8K2j2tTVmGEJU4eKK+JBqf//e6eQ00=,tag:7rzJJidl8C/E6wcgMws5xw==,type:str]
          priority: 15
          services:
            - kind: Service
              name: ak-outpost-example-outpost
              port: 9000
    tls:
        domains:
            - main: ENC[AES256_GCM,data:KJKdEsjdXk09/pu6yBotRJAJbnSynLtH,iv:Podi8kp6SwC9lhjm24RnnAsQD+tPr8zjfhMlNWLwDlI=,tag:cgBWnjZxL8CQ1Gp2rA+0Kg==,type:str]
              sans:
                - ENC[AES256_GCM,data:yd9sM6XFVSF48dOKsFTrjH8onSVl0HAi7A==,iv:cSJyaSUi6bYNEvD5POzX8vJb+JvtUf+PaQ1Pav+V1go=,tag:YUJWMN7bszNLF3vVeZSSrA==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: proxmox-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2M0pZNlhwaTJIVjlwZ2F0
[...]
            5oERDsST2+y8fgHpRv0pwvY6Ng005P11BPuHtnXZxdLwGSxVU88dSw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-02-04T23:20:04Z"
    mac: ENC[AES256_GCM,data:UO9tqr/HWzIiEq3UW0peZSMt0RrR50+thgpJiC5Wp2UKfjhCXaaZuV1YIHqJ9mkQUHzNdySoftQwWwnCOWR5ucuCy0tGhPrKOXsd42ezfu/zsyzJGvPXa+IRhIvC86T7VMSJfJG7dKTxVvjk/0os0AvIaJyIU2uO0OGKojvuoGY=,iv:ySsbPzUGQreCKLXo4AO72Gx/hlVh4nPK2/BvsehWmIU=,tag:2L20D+h+q8oQXT8394EM4Q==,type:str]
    pgp:
        - created_at: "2024-10-11T22:21:58Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//V6QTgzNUWb4yNEgSv1wHrj7tgcyeLXTVevClLyNb4Gzx
[...]
            =Q3F5
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.2
