apps/prod/proxmox-proxy/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: ENC[AES256_GCM,data:8mo0lYfGfZk6Vw5PfSsCpnVm8BPPGqjpBo9JJoyebDQ=,iv:ghvkATHja6tRybpQklY7gn6GVRKbcuR/B1P9GT3Nuk4=,tag:+8EEpu7yMP0liDJ+ABRFug==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:b5/PR7eGl26yum4ggtt5KF89dv3kndQoVQ2u7Wwdtmw=,iv:pc2kbPgixayGLh1VuNFwHGN0ptKkqPrTJJB97Obh9dc=,tag:FunQs3kcTq1O4SlQ+Yd00w==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:SMqohNIQ3Eu37MgEV26/kJKbGdScDERF,iv:Lw0ONVMwqUbmpPt9DVN4QG63L+rLF846GWlm+p+IZAE=,tag:oYOUfZkhxAZP7YBgefDF5w==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: proxmox-staging
    namespace: proxmox-proxy
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:/yX8BO2yPiwZ0Z73vep9t6VA8MnGKX+BiVTaoR/10NQ569I6DM8Gmw==,iv:8Lh9/+eekGlSdeP+q2VQ3r7wmd6NarkzvHjZaGYbVK4=,tag:s6+h6+TuwpxmYVaCVtI1RA==,type:str]
          priority: 10
          middlewares:
            - name: redirect-to-https
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - name: proxmox-proxy
              port: 8006
              scheme: https
              passHostHeader: true
    tls:
        domains:
            - main: ENC[AES256_GCM,data:H3C3L8pIegRkLLhZJxYpLaNIb60WCzwc,iv:6juLGbLwSsOma1Z17Qem1BH3CYUkh0YgZhbCzsQqsSQ=,tag:Rp67oo+I6pTFStEJXZ0F8A==,type:str]
              sans:
                - ENC[AES256_GCM,data:bgSjpoJxfaDI4QKtfdZIW82hyH+FPWX3aQ==,iv:EHsqnla9N7d7045ET+I0ZpsfloX5jWZJJMoB0mSXKI8=,tag:15CCd5SiRI+vMF0BVj8z3Q==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: proxmox-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOUGhYVUgvb01KV0VBR21S
[...]
            VZJ0AFUjRop5tA2TLLWLs1caJqIr4hF3nJB2PDcN16zBUUupU8AAXA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-02-04T23:19:54Z"
    mac: ENC[AES256_GCM,data:3qHdBqIKAdMq0w6JCzp0BC+DwfPL8W6l9bErIRaZPMy+fdSaxKS2xky2nCNCJHHHY/4r8vT3/XPYyHOVib9bRkBafq6gdb6n4NSaR34ot5nnxPvTTTbu3Lnw5GO5Tkt8nLYQAl0HzTpmZTelSYZbr1ZcV4Y/JnQRbZcJJ5EInXY=,iv:LfvB5PFbSz1vM6a1CZuQsRvBqsPa0uDlZXorAqvAvkg=,tag:R5hswZj1HqP/2jpRxC/Y4A==,type:str]
    pgp:
        - created_at: "2024-10-11T22:22:01Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+ILEP/8P7hfmUywtB/rgkFhn6P7daxOh+4U286a/hSpJm
[...]
            =x1c3
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.2
